# svc-gateway

./: .luarc.json  Cargo.toml  Dockerfile  Dockerfile-test  README.md  compile.sh  config.go  config.json  config.jsonc  config.yaml  config.yml  default.nix  docker-compose.yml  gen_server_token  go.mod  main.go  nginx.conf  public.pem  shell.nix  start.sh
.github/workflows/: deploy.yml
lua/: init_app.lua  jwt_parser.lua  my_endpoint.lua  noauth_endpoint.lua  reload.lua  user_service.lua  websocket.lua  websocket_endpoint.lua
middleware/: internal_check.go  logging.go  rate_limit.go  stats.go
proxy/: proxy.go
src/: main.rs
src/config/: loader.rs  mod.rs
src/subscribe/: app_event.rs  handler.rs
src/utils/: generate_auth_headers.rs  mod.rs  server_token_decoder.rs  trace.rs  user_token_decoder.rs
