[package]
name = "svc-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json", "stream"] }
tower = "0.4"
thiserror = "1"
http = "0.2"



