[package]
name = "svc-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json", "stream"] }
tower = "0.4"
thiserror = "1"
http = "0.2"
jsonwebtoken = "10.3.0"
rand = "0.8"
hex = "0.4"
sha2 = "0.10.9"
base64 = "0.22.1"

